
17/12/2001 (Jir)
- Fixed a bug where selling an item to a store caused crash.
- Detected traps will interrupt running.
- Fixed a grave bug concerning memory in traps.c.
- Temporary stats drain(mainly for traps).

18/12/2001 (Jir)
- Bugfixes on traps.
- Bugfix: Immobile monsters beneath 5000'

18/12/2001 (Evileye)
- More bugfixes on traps which were causing memory corruption
- Edge of world bug fixed
- Fixed bug in wiz_lite.
- Added signposts - all special info structs need to be stored.

19/12/2001 (Evileye)
- Got rid of dropping 0 gold pieces
- Added c_ptr->special calling design.
- Bug fixed in project_f (bounds check)

19/12/2001 (Jir)
- Magic mapping disallowed inside NOMAP dungeons.
- Traps can be generated under items.
- 3 new traps.
- a bug in trap disarming fixed.

20/12/2001 (Jir)
- '/dis' can destroy items with pseudo-id tags ({good} or below).
- 3 more traps(Voluminous cuisine/Unmagic/Vermin).
- small bugfix on msg of set_biofeedback.
- Bugfix on Morgoth summoning.

21/12/2001 (Jir)
- Still bugfixes on traps.
- Some traps have chance of disappearence.
- 3 more traps(Random/Wasting wand/Amnesia).
- "You are too afraid to attack .." msgs flood less.
- admin command: /trap [t_idx]

20/12/2001 (Evileye) pfft use GMT/UTC dates jir...
- Bugfix in ghost powers.

25/12/2001 (Jir)
# Unstable, bug-filled, far-from-fully-implemented version!!
# Bugfixes and implementations urgently needed.
  - New ego-item system, which is a mixture of PernA-ego and PernM-randarts.
    (ego-items will use random-seeds[name3] just like randarts.)
  - Item flags are now compatible with PernA [tho many of them are not in yet.]
  - k_idx is automatically calculated from tval and sval.
  - bunch of new items/artifacts/ego-items ported from PernAngband.
- 3 more traps(Silliness/Goodbye-Charlie/Present-Exchange).

26/12/2001 (Jir)
- Item activations for Some of new items are implemented.
- Added a hack to make insta-killing traps appear in deeper levels.
- Thrown randarts never break.