@@ -1,5 +1,5 @@
 ':' to chat **********************************************************
-'?' to help ** PernMAngband 3.3.0  **  The Troubles of Middle Earth **
+'?' to help ** PernMAngband 3.3.2a **  The Troubles of Middle Earth **
             **********************************************************
 
                "One Ring to rule them all, One Ring to find them
@@ -7,13 +7,13 @@
                   In the land of Mordor where the shadows lie"
                                 "Lord of The Rings", J.R.R.Tolkien
 
+ - New item system, including hundleds of new egos/artifacts.
  - Multiple towns/dungeons/towers implemented. Try exploring the wilderness!
  - About 160 new traps added; They now are nasty foes!
  - Ego monsters added; monsters with special abilities can be generated.
  - Dropping/throwing/selling(etc) will make non-random artifacts disappear!
  - Save the game in town as far as possible, so as not to be buried alive.
- - Please don't abuse the system too much ('cheezing'),
-   so that we don't have to remove your save data :)
+ - Please don't abuse the system, so as not to have your character removed.
  - Client version 3.2.1.6 (or greater) is needed.
    The latest client is available from the official site below.
  - To learn about new features/changes, please see the help screen('?').
